# restful-straight-skeleton

./: .gitignore  Dockerfile  README.md  main.py
api_server/: main.py
api_server/templates/: main.html
cgal_front/: CMakeLists.txt  main.cpp  print.h
